--- a/modules/bastion/custom-profile.yaml
+++ b/modules/bastion/custom-profile.yaml
@@ -20,6 +20,8 @@ spec:
     - name: istio-ingressgateway
       enabled: true
       k8s:
+        service:
+          loadBalancerIP: "35.211.89.87"  # Your reserved static IP
         resources:
           requests:
             memory: "512Mi"
@@ -36,14 +38,3 @@ spec:
       meshID: "my-mesh"
     sidecarInjectorWebhook:
       enableNamespacesByDefault: false  # Only inject in labeled namespaces
-
--- 
-apiVersion: security.istio.io/v1beta1
-kind: PeerAuthentication
-metadata:
-  name: default
-  namespace: istio-system
-spec:
-  mtls:
-    mode: STRICT
- 
